--- a/public/styles/site/_variables.scss
+++ b/public/styles/site/_variables.scss
@@ -6,3 +6,5 @@ $headings-font-family: "Oswald", $font-family-sans-serif;
 $headings-font-weight: 700;
 
 $navbar-height: 84px;
+
+$brand-primary: darken(#9b59b6, 10%);
