--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -1,5 +1,63 @@
 @import "./../../../bower_components/sass-mediaqueries/media-queries";
 
+@keyframes fadein {
+    from { opacity: 0; transform: translateY(100%)}
+    to   { opacity: 1; transform: translateY(0%)}
+}
+
+.hero-sky {
+  background: url("/images/elfrink-sky.jpg");
+  background-size: cover;
+  color: white;
+  text-shadow: 2px 2px 11px black;
+  padding: 8em 0 2em;
+  background-position: center center;
+  font-size: 1.5em;
+}
+
+.call-to-action {
+  background: url("/images/time-to-cleat-up.jpg");
+  background-size: cover;
+  background-position: center top;
+  padding: 2em 0;
+  color: white;
+  h1 {
+    margin-top: 0;
+    animation-duration: 3s;
+  }
+  p {
+    font-size: 1.3em;
+    &:nth-child(2) {
+      animation-delay: 1.5s;
+    }
+    &:nth-child(3) {
+      animation-delay: 3s;
+    }
+  }
+
+  h1, p {
+    display: inline-block;
+    background: rgba(black, 0.40);
+    padding: 0.5em 1em;
+  }
+
+  .btn {
+    font-family: $headings-font-family;
+    text-transform: uppercase;
+    padding: 0.5em 1.5em;
+    border-bottom: 3px solid darken($brand-primary, 25%);
+    font-size: 1.3em;
+    animation-delay: 4s;
+  }
+
+  h1, p, .btn {
+    opacity: 0;
+    animation-fill-mode: forwards;
+    animation-name: fadein;
+    animation-duration: 1s;
+  }
+}
+
 .features {
   background-color: rgba(black, 0.10);
   color: black;
@@ -89,13 +147,13 @@
 
   .fa {
     color: #FFF;
-    background: #B9B9B9;
+    background: $brand-primary;
     display: inline-block;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    font-size: 15px;
-    margin-right: 5px;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    font-size: 20px;
+    margin-right: 15px;
     border-radius: 100%;
     text-align: center;
   }
@@ -188,4 +246,18 @@
   }
 
   margin-bottom: 0;
+}
+
+.register {
+  font-size: 1.2em;
+}
+
+.credits {
+  background: $brand-primary;
+  color: white;
+  padding: 0.75em 0 1em 0;
+  border-top: 4px solid darken($brand-primary, 12%);
+  a {
+    color: lighten($brand-primary, 40%);
+  }
 }
