--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -46,7 +46,7 @@ html(lang='en')
 
       block header
 
-      //- Customise your site's navigation by changing the navLinks Array in ./routes/middleware.js
+      //- Customize navigation by changing the navLinks Array in ./routes/middleware.js
 
       div(role="navigation").navbar.navbar-inverse
         .container-fluid
