Fixing paths for bower

--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -1,4 +1,4 @@
-@import "./../../../bower_components/sass-mediaqueries/media-queries";
+@import "./../../bower_components/sass-mediaqueries/media-queries";
 
 @keyframes fadein {
     from { opacity: 0; transform: translateY(100%)}
