--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,7 +1,9 @@
 <div>
+  
+  <img src="http://www.sflultimate.com/images/elfrink-sky.jpg" alt="" style="max-width: 100%; height: auto;">
 
-  <div style="background-color: #231f20; height: 150px;">
-    <img src="http://www.sflultimate.com/images/nav-logo.png" style="height: 130px; display: block; margin: 0 auto; padding-top: 10px;">
+  <div style="background-color: #804399; border-top: 8px solid #4a1560; border-bottom: 8px solid #4a1560;">
+    <img src="http://www.sflultimate.com/images/nav-logo.png" style="height: 70px; width: auto; display: block; text-align:left; margin: 0 auto 0 auto; padding-top: 10px;">
   </div>
 
   <div style="padding: 1em;">
@@ -10,21 +12,31 @@
     </p>
 
     <p>
-      We wanted to send you a friendly reminder that finals will be this Sunday, December 11th at 10am in <strong>Ives Estates Park</strong>.
+      <strong>Spring League Registration closes tomorrow, February 9th at 11pm</strong>.
     </p>
 
     <p>
-      Please note that the fields are turf fields.
+        Quick correction: We'll be playing Sundays from 4-8pm at Ives Estates Park, starting this <strong>Sunday February 12th</strong>, with finals to be played at Amelia Earhart Park on Saturday, May 6th.
     </p>
 
     <p>
       The park address is:<br>
-      20901 NE 16th Ave<br>
+      20901 NE 16 Avenue<br>
       Miami, FL 33179
     </p>
 
+
     <p>
-      See you then!<br>
+      You can register by visiting our website at <a href="http://www.sflultimate.com">www.sflultimate.com</a>.  We'll be having our draft on Friday the 10th and will notify you of teams by Saturday the 11th.
+    </p>
+
+    <p>
+      Please feel free to send us any input you may have to our Facebook page or sflultimate@gmail.com. 
+    </p>
+
+
+    <p>
+      Enjoy your week!<br>
       South Florida Ultimate
     </p>
   </div>
