--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -15,11 +15,15 @@
   font-size: 1.5em;
 }
 
+.sfl-divider {
+  border-color: #dedede;
+  max-width: 60%;
+}
+
 .call-to-action {
-  background: url("/images/time-to-cleat-up.jpg");
   background-size: cover;
   background-position: center top;
-  padding: 2em 0;
+  padding: 6em 0;
   color: white;
   h1 {
     margin-top: 0;
@@ -226,15 +230,17 @@
 }
 
 
-.orange { background-color: orange;  .stats & {background-color: rgba(orange,  0.25);}}
-.blue   { background-color: #2A2AD4; .stats & {background-color: rgba(#2A2AD4, 0.25);}}
-.yellow { background-color: #FFFF19; .stats & {background-color: rgba(#FFFF19, 0.25);}}
-.white  { background-color: white;   .stats & {background-color: rgba(white,   0.25);}}
-.red    { background-color: #FD3C3C; .stats & {background-color: rgba(#FD3C3C, 0.25);}}
-.grey   { background-color: grey;    .stats & {background-color: rgba(grey,    0.25);}}
-.green  { background-color: green;   .stats & {background-color: rgba(green,   0.25);}}
-.black  { background-color: black;   .stats & {background-color: rgba(black,   0.25);}}
-.pink   { background-color: #ff40b3; .stats & {background-color: rgba(#ff40b3, 0.25);}}
+.black   { background-color: black;   .stats & {background-color: rgba(black,   0.25);}}
+.blue    { background-color: #2A2AD4; .stats & {background-color: rgba(#2A2AD4, 0.25);}}
+.green   { background-color: green;   .stats & {background-color: rgba(green,   0.25);}}
+.grey    { background-color: grey;    .stats & {background-color: rgba(grey,    0.25);}}
+.orange  { background-color: orange;  .stats & {background-color: rgba(orange,  0.25);}}
+.pink    { background-color: #ff40b3; .stats & {background-color: rgba(#ff40b3, 0.25);}}
+.purple  { background-color: purple;  .stats & {background-color: rgba(purple,  0.25);}}
+.red     { background-color: #FD3C3C; .stats & {background-color: rgba(#FD3C3C, 0.25);}}
+.white   { background-color: white;   .stats & {background-color: rgba(white,   0.25);}}
+.yellow  { background-color: #FFFF19; .stats & {background-color: rgba(#FFFF19, 0.25);}}
+.crimson { background-color: crimson; .stats & {background-color: rgba(crimson,  0.25);}}
 
 
 
