--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -3,9 +3,9 @@ extends ../layouts/default
 block head
   meta(property="og:title"        content="South Florida Ulitmate")
   meta(property="og:url"          content="http://www.sflultimate.com/")
-  meta(property="og:description"  content="Since 1989, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.")
+  meta(property="og:description"  content="Since 1999, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.")
 
-  meta(property="og:image"        content="http://www.sflultimate.com/images/time-to-cleat-up.jpg")
+  meta(property="og:image"        content="http://www.sflultimate.com/images/aikeem-the-dream.jpg")
   //- meta(property="og:image:width"  content="1200")
   //- meta(property="og:image:height" content="630")
 
@@ -13,18 +13,20 @@ block css
 
 block content
 
-  .call-to-action
+  .call-to-action(style='background-image:url("/images/aikeem-the-dream.jpg")')
     .container
       .row
         .col-md-8
           h1 Time To Cleat Up
-          p Since 1989, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.
-          p We are excited to bring you another season, and look forward to drafting our next set of teams and setting our new schedule.
+          p Since 1999, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.
+          p Teams have been drafted.
       div.text-center
-        a.btn.btn-lg.btn-primary(href="/register") Register
+        a.btn.btn-lg.btn-primary(href="/teams") See Your Teams
 
   .features
     .container
+      h2.text-center Why play South Florida Ultimate?
+      hr.sfl-divider
       .row
         article.col-sm-4.text-center
           i.fa.fa-smile-o.fa-4x
@@ -33,7 +35,7 @@ block content
         article.col-sm-4.text-center
           i.fa.fa-trophy.fa-4x
           h3 Play Ultimate
-          p We have 10 regular season games and our playoff tournament
+          p We have 10 regular season games and our final playoff tournament
         article.col-sm-4.text-center
           i.fa.fa-female.fa-4x
           h3 Ladies Welcome
