--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,6 +1,6 @@
 <div>
   
-  <img src="http://www.sflultimate.com/images/elfrink-sky.jpg" alt="" style="max-width: 100%; height: auto;">
+  <img src="http://www.sflultimate.com/images/aikeem-the-dream.jpg" alt="" style="max-width: 100%; height: auto;">
 
   <div style="background-color: #804399; border-top: 8px solid #4a1560; border-bottom: 8px solid #4a1560;">
     <img src="http://www.sflultimate.com/images/nav-logo.png" style="height: 70px; width: auto; display: block; text-align:left; margin: 0 auto 0 auto; padding-top: 10px;">
@@ -10,33 +10,25 @@
     <p>
       Hi Players!
     </p>
+    <div style="text-align: center">
+      <a target="_blank" href="http://www.sflultimate.com/teams" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">See Your Team</a>      
+    </div>
+
 
     <p>
-      <strong>Spring League Registration closes tomorrow, February 9th at 11pm</strong>.
+      A quick reminder before tomorrow's games.
     </p>
 
     <p>
-        Quick correction: We'll be playing Sundays from 4-8pm at Ives Estates Park, starting this <strong>Sunday February 12th</strong>, with finals to be played at Amelia Earhart Park on Saturday, May 6th.
+      While jerseys are being ordered, please bring a white jersey/shirt and a colored jersey (ideally matching the color of team that you are on).  This helps to make it easy to recognize which player is on what team.
     </p>
 
     <p>
-      The park address is:<br>
-      20901 NE 16 Avenue<br>
-      Miami, FL 33179
-    </p>
-
-
-    <p>
-      You can register by visiting our website at <a href="http://www.sflultimate.com">www.sflultimate.com</a>.  We'll be having our draft on Friday the 10th and will notify you of teams by Saturday the 11th.
+      Also please note that Ives Estates park is an Astro Turf field (artificial grass).  While it's soft to land on, drains well when it rains, and remains in good state year-round, it tends to leave rug-burn like marks when a player slides, so just adjust your attire accordingly.  
     </p>
 
     <p>
-      Please feel free to send us any input you may have to our Facebook page or sflultimate@gmail.com. 
-    </p>
-
-
-    <p>
-      Enjoy your week!<br>
+      Thank you!<br>
       South Florida Ultimate
     </p>
   </div>
@@ -51,9 +43,12 @@
 
 <script>
 
-  var $ps = document.getElementsByTagName('p');
+  var $p  = document.getElementsByTagName('p');
+  var $li = document.getElementsByTagName('li');
 
-  var pStyles = {
+  console.log($li);
+
+  var styles = {
     fontFamily:"-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
     fontSize: "18px",
     lineHeight: "25px",
@@ -61,12 +56,17 @@
   };
 
   
-  for (var i = 0; i < $ps.length; i++) {
-    for (var style in pStyles) {
-      $ps[i].style[style] = pStyles[style];
+  for (var i = 0; i < $p.length; i++) {
+    for (var style in styles) {
+      $p[i].style[style] = styles[style];
     }
   }
 
+  for (var i = 0; i < $li.length; i++) {
+    for (var style in styles) {
+      $li[i].style[style] = styles[style];
+    }
+  }
 
 </script>
 
