--- a/templates/views/schedule.jade
+++ b/templates/views/schedule.jade
@@ -3,7 +3,7 @@ extends ../layouts/default
 block head
   meta(property="og:title"        content="Spring League Schedule")
   meta(property="og:url"          content="http://www.sflultimate.com/schedule")
-  meta(property="og:description"  content="Discover the games schedule for the 2016's Spring League.")
+  meta(property="og:description"  content="Discover the games schedule for the 2017's Spring League.")
 
   meta(property="og:image"        content="http://www.sflultimate.com/images/open-graph/schedule.jpg")
   meta(property="og:image:width"  content="1200")
@@ -31,9 +31,9 @@ block content
               span(ng-if="game.homeScore && game.awayScore") ({{game.homeScore}}-{{game.awayScore}})
               //- span(ng-if="!game.homeScore && !game.awayScore && (1481518800000 - $parent.today) > 0") (Missing stats for game)
           tr(ng-class="(1481518800000 - $parent.today > 0) ? '':'text-muted' ")
-            td Dec 11
+            td May 6th
             td 10:00AM-5:30PM
-            td League Finals (at Ives Estates Park)
+            td League Finals (at Amelia Earhart Park)
 
 block js
   script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
