Added schedule & stats info

--- a/templates/views/stats.jade
+++ b/templates/views/stats.jade
@@ -10,7 +10,7 @@ block content
     h1 Spring League Stats
     section(ng-controller='StatsViewController')
 
-      if (true)
+      if (false)
         .alert.alert-info
           i.fa.fa-info-circle
           strong  Incomplete Stats: 
