--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,6 +1,6 @@
 <div>
   
-  <img src="http://www.sflultimate.com/images/aikeem-the-dream.jpg" alt="" style="max-width: 100%; height: auto;">
+  <img src="http://www.sflultimate.com/images/time-to-cleat-up.jpg" alt="" style="max-width: 100%; height: auto;">
 
   <div style="background-color: #804399; border-top: 8px solid #4a1560; border-bottom: 8px solid #4a1560;">
     <img src="http://www.sflultimate.com/images/nav-logo.png" style="height: 70px; width: auto; display: block; text-align:left; margin: 0 auto 0 auto; padding-top: 10px;">
@@ -10,21 +10,33 @@
     <p>
       Hi Players!
     </p>
+
+    <p>
+      We have now a schedule which you can use to see when your games will be at!
+    </p>
+
+    <p>
+      FYI: You can filter the schedule by your team color.
+    </p>
+
     <div style="text-align: center">
-      <a target="_blank" href="http://www.sflultimate.com/teams" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">See Your Team</a>      
+      <a target="_blank" href="http://www.sflultimate.com/schedule" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">See Your Schedule</a>      
     </div>
 
-
     <p>
-      A quick reminder before tomorrow's games.
+      Additionally, Gary has also gotten our stats up-to-date for Week 1, so now we can see the league stats section!
     </p>
 
     <p>
-      While jerseys are being ordered, please bring a white jersey/shirt and a colored jersey (ideally matching the color of team that you are on).  This helps to make it easy to recognize which player is on what team.
+      Please be sure to keep the stat sheets accurate so that we can keep better track of wins, losses, point differential, and rankings to see who will earn awards for top defensive, scoring, and assist leaders for each gender.
     </p>
 
+    <div style="text-align: center">
+      <a target="_blank" href="http://www.sflultimate.com/stats" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">View Your Stats</a>      
+    </div>
+
     <p>
-      Also please note that Ives Estates park is an Astro Turf field (artificial grass).  While it's soft to land on, drains well when it rains, and remains in good state year-round, it tends to leave rug-burn like marks when a player slides, so just adjust your attire accordingly.  
+      Enjoy your Friday and see you all Sunday!
     </p>
 
     <p>
