Updating Keystone version and to work with new Node.js and npm version

--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,6 +1,6 @@
 <div>
   
-  <img src="http://www.sflultimate.com/images/time-to-cleat-up.jpg" alt="" style="max-width: 100%; height: auto;">
+  <img src="https://scontent-mia1-2.xx.fbcdn.net/v/t31.0-0/p180x540/14480728_1174122455981502_1789663370523593974_o.jpg?oh=6cd018074e9a51afcf2942c95dbc3fc5&oe=593F97B8" alt="" style="max-width: 100%; height: auto;">
 
   <div style="background-color: #804399; border-top: 8px solid #4a1560; border-bottom: 8px solid #4a1560;">
     <img src="http://www.sflultimate.com/images/nav-logo.png" style="height: 70px; width: auto; display: block; text-align:left; margin: 0 auto 0 auto; padding-top: 10px;">
@@ -12,31 +12,32 @@
     </p>
 
     <p>
-      We have now a schedule which you can use to see when your games will be at!
-    </p>
-
-    <p>
-      FYI: You can filter the schedule by your team color.
+      We have now release team standings.
     </p>
 
     <div style="text-align: center">
-      <a target="_blank" href="http://www.sflultimate.com/schedule" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">See Your Schedule</a>      
+      <a target="_blank" href="http://www.sflultimate.com" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">See Team Standings</a>      
     </div>
 
     <p>
-      Additionally, Gary has also gotten our stats up-to-date for Week 1, so now we can see the league stats section!
+      Also the University of Miami's Men's Ulitmate Team is holding <strong>a hat tournament this Saturday</strong>. The event is open to everyone, and is a great opportunity to meet other ultimate players in the South Florida area.
     </p>
 
     <p>
-      Please be sure to keep the stat sheets accurate so that we can keep better track of wins, losses, point differential, and rankings to see who will earn awards for top defensive, scoring, and assist leaders for each gender.
+       All proceeds from this event will support the men's team in their pursuit of a bid to regionals in the spring. Teams will be decided randomly and buddy requests will be honored only if you both request each other. 
+    </p>
+
+    <p>
+      This is a mixed gender tournament, and on the field ratio will be decided based on the number of female participants. Plan to play 3-4 games over the course of the day. Registration is $25.
     </p>
 
     <div style="text-align: center">
-      <a target="_blank" href="http://www.sflultimate.com/stats" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">View Your Stats</a>      
+      <a target="_blank" href="https://www.facebook.com/events/254729531589792/" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">See UM Hatter</a>      
     </div>
 
+
     <p>
-      Enjoy your Friday and see you all Sunday!
+      Lastly, Gary has updated stats for Week 2, so feel free to check them out!
     </p>
 
     <p>
